# dijkstra-dashboard

./: .ci-hub.yml  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: hub-ci.yml
examples/: directed.json  graph_test.json  simple.json  unreachable.json
lessons/: shortest_path.py
src/dijkstra_dashboard/: __init__.py  __main__.py  config.py
src/dijkstra_dashboard/core/: __init__.py  dijkstra.py  errors.py  graph.py  schema.py  serialization.py  types.py  validation.py
src/dijkstra_dashboard/core/algorithms/: __init__.py  base.py  dijkstra.py  registry.py  runner.py
src/dijkstra_dashboard/core/layouts/: __init__.py  circle.py  grid.py  spring.py
src/dijkstra_dashboard/ui/: controls_panel.py  graph_edge.py  graph_node.py  graph_view.py  main_window.py  status_panel.py
tests/: conftest.py
tests/core/: test_dijkstra_algorithm.py  test_graph.py  test_serialization.py  test_validation.py
